WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116712
[AC] Needs to be guarded by USE(ACCELERATED_COMPOSITING)
https://bugs.webkit.org/show_bug.cgi?id=116712
Summary
[AC] Needs to be guarded by USE(ACCELERATED_COMPOSITING)
Seokju Kwon
Reported
2013-05-24 02:03:03 PDT
renderView variable in FrameView::setFrameRect It is used when ACCELERATED_COMPOSITING is enabled. So, this patch allows it to be guarded by USE(ACCELERATED_COMPOSITING).
Attachments
Patch
(1.49 KB, patch)
2013-05-24 02:10 PDT
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2013-05-24 02:10:12 PDT
Created
attachment 202790
[details]
Patch
Seokju Kwon
Comment 2
2013-05-24 02:18:12 PDT
Comment on
attachment 202790
[details]
Patch If ACCELERATED_COMPOSITING is disabled /WebKit/Source/WebCore/page/FrameView.cpp: In member function ‘virtual void WebCore::FrameView::setFrameRect(const WebCore::IntRect&)’: /WebKit/Source/WebCore/page/FrameView.cpp:472:17: error: unused variable ‘renderView’ [-Werror=unused-variable]
WebKit Commit Bot
Comment 3
2013-05-24 13:25:39 PDT
Comment on
attachment 202790
[details]
Patch Clearing flags on attachment: 202790 Committed
r150656
: <
http://trac.webkit.org/changeset/150656
>
WebKit Commit Bot
Comment 4
2013-05-24 13:25:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug