[AC] Needs to be guarded by USE(ACCELERATED_COMPOSITING) https://bugs.webkit.org/show_bug.cgi?id=116712

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2013-05-24
Reviewed by Andreas Kling.

renderView is used when ACCELERATED_COMPOSITING is enabled.
So, this patch allows it to be guarded by USE(ACCELERATED_COMPOSITING).

No new tests, no behavior change.

* page/FrameView.cpp:
(WebCore::FrameView::setFrameRect):

Canonical link: https://commits.webkit.org/135033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150656 268f45cc-cd09-0410-ab3c-d52691b4dbfc